--- a/app/src/main/res/layout/sractivity_main.xml
+++ b/app/src/main/res/layout/sractivity_main.xml
@@ -31,7 +31,7 @@
             android:layout_height="match_parent"
             android:fontFamily="@font/nanumbarungothicbold"
             android:gravity="center"
-            android:text="지하철 정보"
+            android:text="지하철 정보!!"
             android:textColor="#000000"
             android:textSize="25dp"
             android:layout_weight="5"/>
