--- a/app/src/main/res/layout/popup_activity.xml
+++ b/app/src/main/res/layout/popup_activity.xml
@@ -26,8 +26,7 @@
         <Button
             android:id="@+id/stayline1"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_height="70dp"
             android:layout_row="1"
             android:layout_column="1"
             android:background="@drawable/border_list_line1"
@@ -39,8 +38,7 @@
         <Button
             android:id="@+id/stayline2"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_height="70dp"
             android:layout_row="2"
             android:layout_column="1"
             android:background="@drawable/border_list_line2"
@@ -52,8 +50,7 @@
         <Button
             android:id="@+id/stayline3"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_height="70dp"
             android:layout_row="3"
             android:layout_column="1"
             android:background="@drawable/border_list_line3"
@@ -65,8 +62,7 @@
         <Button
             android:id="@+id/stayline4"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_height="70dp"
             android:layout_row="4"
             android:layout_column="1"
             android:background="@drawable/border_list_line4"
@@ -78,8 +74,7 @@
         <Button
             android:id="@+id/stayline5"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_height="70dp"
             android:layout_row="5"
             android:layout_column="1"
             android:background="@drawable/border_list_line5"
@@ -91,8 +86,7 @@
         <Button
             android:id="@+id/stayline6"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_height="70dp"
             android:layout_row="6"
             android:layout_column="1"
             android:background="@drawable/border_list_line6"
@@ -104,8 +98,7 @@
         <Button
             android:id="@+id/stayline7"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_height="70dp"
             android:layout_row="7"
             android:layout_column="1"
             android:background="@drawable/border_list_line7"
@@ -117,8 +110,7 @@
         <Button
             android:id="@+id/stayline8"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_height="70dp"
             android:layout_row="8"
             android:layout_column="1"
             android:background="@drawable/border_list_line8"
@@ -130,8 +122,7 @@
         <Button
             android:id="@+id/stayline9"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_height="70dp"
             android:layout_row="9"
             android:layout_column="1"
             android:background="@drawable/border_list_line9"
@@ -143,8 +134,7 @@
         <Button
             android:id="@+id/stayline10"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_height="70dp"
             android:layout_row="10"
             android:layout_column="1"
             android:background="@drawable/border_list_activity"
