--- a/app/src/main/res/layout/popup_activity.xml
+++ b/app/src/main/res/layout/popup_activity.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     android:background="@android:color/background_light">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="0px"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_row="1"
-            android:layout_column="1"
             android:background="@drawable/border_list_activity"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 지하철"
@@ -27,8 +25,6 @@
             android:id="@+id/stayline1"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_row="1"
-            android:layout_column="1"
             android:background="@drawable/border_list_line1"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 1호선"
@@ -39,8 +35,6 @@
             android:id="@+id/stayline2"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_row="2"
-            android:layout_column="1"
             android:background="@drawable/border_list_line2"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 2호선"
@@ -51,8 +45,6 @@
             android:id="@+id/stayline3"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_row="3"
-            android:layout_column="1"
             android:background="@drawable/border_list_line3"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 3호선"
@@ -63,8 +55,6 @@
             android:id="@+id/stayline4"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_row="4"
-            android:layout_column="1"
             android:background="@drawable/border_list_line4"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 4호선"
@@ -75,8 +65,6 @@
             android:id="@+id/stayline5"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_row="5"
-            android:layout_column="1"
             android:background="@drawable/border_list_line5"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 5호선"
@@ -87,8 +75,6 @@
             android:id="@+id/stayline6"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_row="6"
-            android:layout_column="1"
             android:background="@drawable/border_list_line6"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 6호선"
@@ -99,8 +85,6 @@
             android:id="@+id/stayline7"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_row="7"
-            android:layout_column="1"
             android:background="@drawable/border_list_line7"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 7호선"
@@ -111,8 +95,6 @@
             android:id="@+id/stayline8"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_row="8"
-            android:layout_column="1"
             android:background="@drawable/border_list_line8"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 8호선"
@@ -123,8 +105,6 @@
             android:id="@+id/stayline9"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_row="9"
-            android:layout_column="1"
             android:background="@drawable/border_list_line9"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="서울 9호선"
@@ -135,8 +115,6 @@
             android:id="@+id/stayline10"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_row="10"
-            android:layout_column="1"
             android:background="@drawable/border_list_activity"
             android:fontFamily="@font/nanumbarungothicbold"
             android:text="TEST"
@@ -148,8 +126,6 @@
             android:layout_width="0px"
             android:layout_height="match_parent"
             android:layout_weight="2.5"
-            android:layout_row="0"
-            android:layout_column="1"
             android:dividerHeight="1dp">
 
         </ListView>
