--- a/app/src/main/res/layout/recycler_items.xml
+++ b/app/src/main/res/layout/recycler_items.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -11,25 +11,24 @@
         android:background="#FFFFFFFF">
 
         <ImageView
+            android:id="@+id/train_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/train_icon"
             android:background="#FFFFFFFF"
             android:src="@drawable/side_traindefault"/>
+
         <TextView
+            android:id="@+id/vertical_description"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_marginLeft="50dp"
             android:layout_alignBottom="@+id/train_icon"
             android:layout_alignLeft="@+id/train_icon"
             android:layout_alignRight="@+id/train_icon"
             android:layout_alignTop="@+id/train_icon"
             android:gravity="center"
-            android:layout_marginLeft="50dp"
-            android:id="@+id/vertical_description"
-            android:textSize="30dp"
-            android:layout_centerVertical="true"
-
-            android:text="0"/>
+            android:text="0"
+            android:textSize="30dp"/>
 
     </RelativeLayout>
 
