--- a/app/src/main/res/layout/statistics_activity.xml
+++ b/app/src/main/res/layout/statistics_activity.xml
@@ -4,46 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
     android:orientation="vertical"
+    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:id="@+id/slide"
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:background="@drawable/top_layout_border"
+        android:layout_weight="0.8"
         android:orientation="horizontal"
-        android:layout_weight="0.8">
+        android:background="@drawable/top_layout_border">
 
 
         <ImageButton
             android:id="@+id/Menubtn"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:adjustViewBounds="true"
-            android:background="#7BD6F8"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:background="#7BD6F8"
             app:srcCompat="@drawable/ic_menu64"/>
 
         <TextView
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:fontFamily="@font/nanumbarungothicbold"
+            android:layout_weight="5"
             android:gravity="center"
+            android:fontFamily="@font/nanumbarungothicbold"
             android:text="통계 정보"
-            android:textColor="#000000"
             android:textSize="25dp"
-            android:layout_weight="5"/>
+            android:textColor="#000000"/>
 
         <ImageButton
             android:id="@+id/btn"
             android:layout_width="0px"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="#7BD6F8"
-            android:src="@drawable/replayarrow32"
-            android:layout_weight="1" />
+            android:src="@drawable/replayarrow32" />
 
 
 
@@ -53,11 +52,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0px"
+        android:layout_weight="1"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/Dateset"
@@ -73,15 +72,14 @@
             android:id="@+id/spinnerDrop"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="2.5"
-            android:layout_above="@+id/chart"/>
+            android:layout_weight="2.5"/>
 
         <Button
             android:id="@+id/Searchbtn"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
             android:layout_weight="1.5"
+            android:layout_marginRight="20dp"
             android:background="@drawable/border_gray"
             android:text="조회하기"
             android:textSize="14dp"
@@ -95,9 +93,9 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="0px"
+        android:layout_weight="8"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="8"/>
+        android:layout_marginRight="10dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -107,11 +105,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fontFamily="@font/nanumbarungothicbold"
             android:gravity="center"
+            android:fontFamily="@font/nanumbarungothicbold"
             android:text="Hacheol2   ver1.0.     Made by. u_ri_Oh."
-            android:textColor="#000000"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:textColor="#000000" />
 
     </LinearLayout>
 
